# wombat

./: CHANGELOG.md  Cargo.toml  README.md  index.html  rust-toolchain
.github/workflows/: pages.yml  release.yml  rust.yml  typos.yml
assets/: gen_assets.sh  manifest.json  sw.js
src/: app.rs  central_panel.rs  lib.rs  main.rs  panels.rs  selection.rs  side_panel.rs  top_panel.rs  windows.rs
src/windows/: detection.rs  histogram.rs  importer.rs  mod.rs
src/windows/detection/: cert.rs  mod.rs  png.rs  xml.rs
